--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -51,12 +51,12 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-  background: $bg-base;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: $border-subtle;
+  background: $text-muted;
   border-radius: 3px;
 
-  &:hover { background: $text-muted; }
+  &:hover { background: $text-secondary; }
 }
